telit: plug GPS data port leak

The _get_port_gps() returns a full reference, use _peek_port_gps()
instead.

See https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/302

(cherry picked from commit 102de14c15b1c278988de376d03262bcb078211d)